--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,20 @@
 set-option -g prefix C-a
 bind-key C-x next-window
 bind-key C-z previous-window
-bind-key C-a new-window
+
+unbind C-a
+bind C-a new-window -c "#{pane_current_path}"
+
 bind-key C-w kill-window
 bind-key C-d attach
+
+unbind %
+bind-key % split-window -h -c "#{pane_current_path}"
+
+unbind '"'
+bind-key '"' split-window -c "#{pane_current_path}"
+
+
 bind-key -n F12 kill-pane
 bind-key -n F1 select-pane -L
 bind-key -n F2 select-pane -R
